<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_single"
            android:icon="@drawable/menu_single"
            android:title="@string/menu_single" />

        <item
            android:id="@+id/nav_relation"
            android:icon="@drawable/menu_lien"
            android:title="@string/menu_relation" />

        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/menu_timer"
            android:title="@string/menu_timer" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/menu_about"
            android:title="@string/menu_about" />

    </group>
</menu>